# video_sentry

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20230516101726_photos.sql  20230516101733_faces.sql  20230517102937_persons.sql
src/: db.rs  detection.rs  image_processor.rs  lib.rs  main.rs  recognition.rs  storage.rs  trainer.rs  ui.rs  video_processor.rs
src/db/: face.rs  person.rs  photo.rs
src/detection/: face_image.rs  photo.rs
src/trainer/: cli.rs  directory_trainer.rs
tests/: db.rs  detection.rs  directory_trainer.rs  image_processor.rs  video_processor.rs
tests/common/: mod.rs
