[package]
name = "video_sentry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlib-face-recognition = { version = "0.3.0", features = ["embed-all"] }
image = "0.24.6"
clap = "4.2.7"
dotenvy = "0.15"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite", "macros", "migrate" ] }
tokio = { version = "1.20.0", features = ["macros"]}
serde_json = "1.0"
regex = "1"
colored = "2.0.0"
spinners = "4.1.0"
debug_print = "1.0.0"
[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
